[tool.poetry]
name = "ai4ia-pt-oracle"
version = "0.1.0"
description = ""
authors = ["Victor Costa <victorcrcosta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.3"
spacy = "^3.7.2"
tqdm = "^4.66.1"
pandas = "^2.2.0"
pandera = "^0.18.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"
datasets = "^2.16.1"
ipywidgets = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
